✨ PIC-1716 - post offender matches by case id and defendant id (#292)